--- a/lib/ansible/roles/php/templates/mailcatcher.ini.j2
+++ b/lib/ansible/roles/php/templates/mailcatcher.ini.j2
@@ -1,3 +1,3 @@
 ; {{ ansible_managed }}
 
-sendmail_path = /usr/bin/env catchmail -f {{ mailcatcher_email_from }}
+sendmail_path = "/usr/local/rvm/bin/catchmail {{ mailcatcher_smtp_port }} {{ mailcatcher_ip }} -f {{ mailcatcher_email_from }}"
